[package]
name = "nft-candy-machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "nft_candy_machine"

[features]
no-entrypoint = [ ]
no-idl = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]

[dependencies]
anchor-lang = "0.17.0"
arrayref = "0.3.6"
anchor-spl = "0.17.0"

  [dependencies.metaplex-token-metadata]
  path = "../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../safecoin-program-library/token/program"
